# claude-code-templates

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  MANIFEST.json  README.md  codex-output.md  reference-sync-report.md
.claude/: CLAUDE.md  MEMORY_GUIDE.md  REGISTRY.md  USER_GUIDE.md  settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: _Agent.metadata.reference.md  _agent-file-structure.template.md  code-reviewer.md  codebase-analyst.md  codex-delegator.md  context-manager.md  debugger.md  deployment-engineer.md  gemini-delegator.md  library-researcher.md  mcp-backend-engineer.md  meta-agent.md  n8n-mcp-tester.md  opencode-delegator.md  team-builder.md  team-validator.md  technical-researcher.md  test-automator.md
.claude/hooks/: dangerous-command-blocker.py  hooks.json  lsp-reference-checker.py  lsp-type-validator.py  memory-distill.py  memory-loader.py  memory-search-hybrid.py  (+13 more)
.claude/skills/agent-sandboxes/sandbox_cli/: pyproject.toml
.claude/skills/agent-sandboxes/sandbox_cli/src/: __init__.py  main.py
.claude/skills/agent-sandboxes/sandbox_cli/src/commands/: exec.py  files.py  sandbox.py
PRPs/: cbass-n8n-workflow-manager.md  distill-dangerous-command-blocker.md  distill-prompt-validator.md  distill-status-line-context.md  distill-uv-hook-template.md  obsidian-ecosystem-hub-cicd.md  obsidian-ecosystem-hub-monitoring.md
git-hooks/: install.sh  post-commit  pre-commit  pre-push
global/: manifest.json
scripts/: install-global.py  install-global.sh  update-references.sh  validate-docs.py  validate-manifest.py
(+234 files in other folders)
