[project]
name = "sandbox-cli"
version = "1.0.0"
description = "E2B Sandbox CLI for isolated code execution in agent workflows"
requires-python = ">=3.11"
dependencies = [
    "e2b>=2.6.4",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
sbx = "src.main:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
